// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fillGrid it correctly fills in the array of data with data starting at position 2 1`] = `
[
  {
    "length": 1,
    "start": 0,
    "text": "",
  },
  {
    "length": 2,
    "start": 1,
    "style": "normal",
    "text": "Naka no takane",
    "voices": [],
  },
  {
    "length": 1,
    "start": 3,
    "text": "",
  },
  {
    "length": 1,
    "start": 4,
    "style": "normal",
    "text": "Naka no takane",
    "voices": [],
  },
  {
    "length": 2,
    "start": 5,
    "style": "normal",
    "text": "Naka no takane",
    "voices": [],
  },
  {
    "length": 3,
    "start": 7,
    "text": "",
  },
  {
    "length": 2,
    "start": 10,
    "style": "normal",
    "text": "Naka no takane",
    "voices": [],
  },
  {
    "length": 1,
    "start": 13,
    "text": "",
  },
]
`;

exports[`fillGrid it correctly fills in the array of data with data starting past 2 1`] = `
[
  {
    "length": 2,
    "start": 0,
    "text": "",
  },
  {
    "length": 1,
    "start": 2,
    "text": "",
  },
  {
    "length": 2,
    "start": 3,
    "style": "normal",
    "text": "Naka no takane",
    "voices": [],
  },
  {
    "length": 3,
    "start": 5,
    "text": "",
  },
  {
    "length": 1,
    "start": 8,
    "style": "normal",
    "text": "Naka no takane",
    "voices": [],
  },
  {
    "length": 4,
    "start": 10,
    "text": "",
  },
]
`;
